[package]
name = "rfnoc-tool"
version = "0.1.0"
edition = "2021"
authors = ["RFNoC Tool Team"]
description = "High-performance RFNoC streaming and analysis tool"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime - using smol for better real-time performance
smol = "2.0"
async-channel = "2.1"
futures-lite = "2.1"
tokio = { version = "1.35", features = ["full"] }
ctrlc = "3.4"
prettytable-rs = "0.10"

# FFI and UHD bindings
cxx = "1.0"
libc = "0.2"

# Data structures and serialization
rtrb = "0.3"  # Real-time ring buffer
crossbeam = { version = "0.8", features = ["crossbeam-channel", "crossbeam-queue"] }
zerocopy = { version = "0.8", features = ["derive"] }
bytemuck = { version = "1.14", features = ["derive"] }
rkyv = { version = "0.8.11" }
# bytemuck = "1.14"

# Configuration and serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
toml = "0.9.5"
serde_json = "1.0.142"

# Logging and telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
log = "0.4"
log4rs = "1.2"

# CLI and REPL
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }
rustyline = "17.0.0"
rustyline-derive = "0.11.1"
colored = "3.0.0"
indicatif = "0.18.0"
console = "0.16.0"

# Data export - Use arrow 52.0 to avoid the conflict
csv = "1.3.1"
hdf5 = "0.8.1"  # For MATLAB export
arrow = { version = "56.0.0", features = ["csv", "json"] }

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Utilities
chrono = "0.4"
num-complex = "0.4"
num-traits = "0.2"
parking_lot = "0.12"
dashmap = "6.1.0"
once_cell = "1.19"
async-trait = "0.1"

# Performance monitoring
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"

[dev-dependencies]
tempfile = "3.9"
mockall = "0.13.1"
serial_test = "3.0"

[build-dependencies]
cxx-build = "1.0.165"
cc = "1.2.32"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "rfnoc-tool"
path = "src/main.rs"